--- a/css/style.css
+++ b/css/style.css
@@ -17,6 +17,7 @@
 .plate {
    width: 100%;
    position: relative;
+   bottom: 0;
    margin: 8%;
    height: 200px;
    box-shadow: 0 0 0 5px grey,
@@ -24,10 +25,10 @@
    0 0 0 12px black;
    border-radius: 50%;
    transform: rotateX(45deg);
-   transition: margin-top 5s;
+   transition: bottom 5s;
 }
-.container {
-   margin-top: 20vh
+p {
+   margin-bottom: 15vh;
 }
 
 /* ======================= */
@@ -45,7 +46,6 @@
    height: 20px;
    border-radius: 600px;
    background-color: green;
-   z-index: 100;
 }
 
 #right .zucchina {
